# backend_boilerplate

./: .cz.toml  .dockerignore  .editorconfig  .env.production.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.prod.yml  docker-compose.yml  index.md  manage.py  mkdocs.yml  pyproject.toml  pytest.ini
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
apps/core/: decorators.py  health.py  middleware.py  urls.py  versioning.py
apps/core/utils/: dev.py
apps/custom_user/: apps.py  schema.py  serializers.py  urls.py  views.py
apps/custom_user/migrations/: 0001_initial.py  0002_alter_customuser_options_alter_customuser_email_and_more.py
apps/tests/: test_urls.py
archive/: README.md
config/: __init__.py  asgi.py  celery_app.py  env.py  urls.py  wsgi.py
config/settings/: api_docs.py  apps.py  base.py  dev.py  logging.py  prod.py  restframework.py  security.py  sentry.py  test.py  tests.py
docs/: TODO.txt  architecture.md  context.md  contributing.md  dev_setup.md  dev_workflow.md  git.md  security.md  setup_hybrid.md
docs/api/: authentication.md
docs/deployment/: deployment-guide.md
docs/development/: dev_setup.md  environments.md
docs/getting-started/: installation.md
docs/security/: security-guidelines.md
environments/: README.md  base.env  base.env.example  dev.env  dev.env.example  dev_docker.env.example  prod.env.example  test.env.example
requirements/: base.in  base.txt  dev.in  dev.txt  prod.in  prod.txt
scripts/: compile-requirements.sh  release.sh  reset_db.sh  run_web.sh  run_worker.sh  setup-dev.sh  wait_for_db.py
templates/accounts/: locked.html
tests/: conftest.py
tests/factories/: user_factory.py
tests/functional/: test_app.py
tests/integration/: test_auth_api.py
tests/smoke/: test_urls_smoke.py
tests/unit/: test_custom_user.py  test_user_model.py
