[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py313"]
exclude = '''
/(
  \.venv
| \.git
| \.mypy_cache
| \.ruff_cache
| \.pytest_cache
| build
| dist
| migrations
)/
'''

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [
  ".venv",
  "migrations",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"**/settings/*.py" = ["F401"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests/**/*.py"]
addopts = "-ra -q"
testpaths = ["tests"]
