[project]
name = "backend-boilerplate"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2,<5.3",
    "django-environ>=0.11",
    "psycopg[binary]>=3.2",
    "djangorestframework>=3.16",
    "djangorestframework-simplejwt>=5.4",
    "drf-spectacular>=0.28",
    "sentry-sdk[django]>=2.0",
    "python-json-logger>=2.0",
    "django-cors-headers>=4.6",
    "django-extensions>=3.2",
]

[dependency-groups]
dev = [
    "watchtower>=3.0",
    "ruff>=0.11",
    "pre-commit>=3.7",
    "ipython>=8.0",
    "ipdb>=0.13",
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "model-bakery>=1.18",
    "freezegun>=1.5",
    "django-debug-toolbar>=4.3",
]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [
  ".venv",
  "migrations",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"**/settings/*.py" = ["F401", "E402", "F405"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests/**/*.py"]
addopts = "-ra -q"
testpaths = ["tests"]
